<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="phonenum">Phone:</string>
    <string name="hintinput">input your number</string>
    <string name="title">Login</string>
    <string name="getcode">GetCode</string>
    <string name="code">Code:</string>
    <string name="inputcode">input your code</string>
    <string name="login">Login</string>
    <string name="comment">Send</string>
    <string name="publishmessage">Publish</string>
    <string name="phone_number_not_null">PhoneNumber Not is null! and SmsCode is Not null!</string>
    <string name="result_sms_successful">Get SmSCode Successful! please check your short message\!</string>
    <string name="result_sms_fail">Get SmSCode Fail\!</string>
    <string name="progress_sms_title">Connecting..</string>
    <string name="progress_sms_test">Connecting to sever</string>
    <string name="serverstatus">ServerStatus:</string>
    <string name="result_code">resultcode</string>
    <string name="login_progress_title">Loging...</string>
    <string name="login_progress_text">Please Waite....</string>
    <string name="list_title">title</string>
    <string name="connect_title">Connection Server...</string>
    <string name="connect_ms">Waite..</string>
    <string name="item_last_time">time</string>

    <string name="islocal">Is LocalDate?</string>
    <string name="islocal_title">Prompt information</string>
</resources>
