<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff436a7e"
    android:padding="10dip"
    android:layout_gravity="center_horizontal"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:background="#ffd76452"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/title" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/phonenum"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/phonenumber"
            android:hint="@string/hintinput"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:inputType="phone"
            android:singleLine="true"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <!--singleLine是否单行显示-->
        <!--textAppearance：字体风格-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:singleLine="true"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/inputcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/inputcode"
            android:inputType="number"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/serverstatus" />

        <ImageView
            android:id="@+id/statuscode"
            android:layout_gravity="center_vertical"
            android:layout_width="20dip"
            android:layout_height="15dip"
             />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_code" />

        <TextView
            android:id="@+id/resultcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/getcode"
            android:layout_gravity="center_horizontal"
            android:text="@string/getcode"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/login"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>


</LinearLayout>